# pausable-udt

./: config.toml
contracts/pausable-udt/: Cargo.toml
contracts/pausable-udt/src/: config.rs  error.rs  fallback.rs  main.rs  modules.rs
